crates/review-buddy/tests/snapshots/cli_e2e__doctor_summary.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: head
---
Review Buddy <version>
Running on demo fixtures (demo)

Auth
  ✓ github.com (liminal-hq)  signed in as smorris via demo (demo)
  ✓ github.com (smorris)  signed in as smorris via demo (demo)
  ✓ gitlab.platform.example (platform)  signed in as smorris via demo (demo)
  ✓ gitlab.com  signed in as smorris via demo (demo)

Rate limits
  github.com (liminal-hq)  not reported (demo)
  github.com (smorris)  not reported (demo)
  gitlab.platform.example (platform)  not reported (demo)
  gitlab.com  not reported (demo)

API versions
  github.com (liminal-hq)  GitHub REST 2022-11-28 (demo)
  github.com (smorris)  GitHub REST 2022-11-28 (demo)
  gitlab.platform.example (platform)  GitLab REST v4 (demo)
  gitlab.com  GitLab REST v4 (demo)

Endpoints
  github.com (liminal-hq)  not used (demo)
  github.com (smorris)  not used (demo)
  gitlab.platform.example (platform)  not used (demo)
  gitlab.com  not used (demo)

Clock
  github.com (liminal-hq)  not checked (demo)
  github.com (smorris)  not checked (demo)
  gitlab.platform.example (platform)  not checked (demo)
  gitlab.com  not checked (demo)

Capabilities
  github.com (liminal-hq)  demo capabilities (demo) · everything available
  github.com (smorris)  demo capabilities (demo) · everything available
  gitlab.platform.example (platform)  demo capabilities (demo) · not available: request changes, viewed files
  gitlab.com  demo capabilities (demo) · not available: request changes, viewed files
