crates/review-buddy/tests/snapshots/cli_e2e__fields_auth_status.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: stdout
---
source
kind
host
method
state
user
scopes
expires
message
fix
