crates/review-buddy/tests/snapshots/cli_e2e__fields_config_paths.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: stdout
---
configDir
dataDir
cacheDir
stateDir
runtimeDir
systemConfigDirs
systemDataDirs
configFiles
writeTarget
