crates/review-buddy/tests/snapshots/cli_e2e__fields_doctor.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: stdout
---
version
auth
rateLimits
apiVersions
endpoints
clock
capabilities
paths
