crates/review-buddy/tests/snapshots/cli_e2e__fields_pr_checks.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: stdout
---
name
state
durationSecs
url
required
