crates/review-buddy/tests/snapshots/cli_e2e__fields_pr_list.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: stdout
---
source
forge
host
repo
number
ref
url
title
author
state
isDraft
createdAt
updatedAt
headRefName
baseRefName
headSha
additions
deletions
changedFiles
ci
reviewers
myRole
myReview
bucket
bucketReason
labels
