crates/review-buddy/tests/snapshots/cli_e2e__fields_source_list.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: stdout
---
name
kind
host
enabled
inAll
auth
scope
apiUrl
