crates/review-buddy/tests/snapshots/cli_e2e__fields_theme_list.snap
---
source: crates/review-buddy/tests/cli_e2e.rs
expression: stdout
---
id
name
appearance
builtin
current
